--- a/Demo.Languages2/Demo.Languages2.ReactJSEssentials/packages.config
+++ b/Demo.Languages2/Demo.Languages2.ReactJSEssentials/packages.config
@@ -17,6 +17,7 @@
   <package id="Modernizr" version="2.8.3" targetFramework="net452" />
   <package id="MsieJavaScriptEngine" version="1.6.0" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="8.0.2" targetFramework="net452" />
+  <package id="Node.js" version="5.3.0" targetFramework="net45" />
   <package id="React.Core" version="2.2.0" targetFramework="net452" />
   <package id="React.TypeScript.DefinitelyTyped" version="0.1.12" targetFramework="net452" />
   <package id="RequireJS" version="2.1.22" targetFramework="net452" />
